--- a/teszt.html
+++ b/teszt.html
@@ -93,7 +93,10 @@
                             <!-- Felhasználói profilkép -->
                             <div class="postPfp" style="width: 65px; height: 65px; background-size: cover; background-position: center; background-repeat: no-repeat; background-image: url('jonkler.webp');"></div>
                             <!-- Felhasználónév -->
-                            <span>@WhySoSerious</span>
+                            <div style="display: flex; flex-wrap: wrap; flex-direction: column; gap: 5px">
+                                <span>@WhySoSerious</span>
+                                <span style="font-size: 15px;">oogabooga</span>
+                            </div>
                             <!-- More button ami "report"/"save" buttonokat tartalmazza -->
                             <span class="material-symbols-outlined more-icon">
                                 <img src="blackSVG/morehorizSVG.svg" alt="More icon" srcset="">
@@ -129,7 +132,10 @@
                             <!-- Felhasználói profilkép -->
                             <div class="postPfp" style="width: 65px; height: 65px; background-size: cover; background-position: center; background-repeat: no-repeat; background-image: url('jonkler.webp');"></div>
                             <!-- Felhasználónév -->
-                            <span>@WhySoSerious</span>
+                            <div style="display: flex; flex-wrap: wrap; flex-direction: column; gap: 5px">
+                                <span>@WhySoSerious</span>
+                                <span style="font-size: 15px;">oogabooga</span>
+                            </div>
                             <!-- More button ami "report"/"save" buttonokat tartalmazza -->
                             <span class="material-symbols-outlined more-icon">
                                 <img src="blackSVG/morehorizSVG.svg" alt="More icon" srcset="">
@@ -138,7 +144,8 @@
 
                         <!-- Poszt szövege (user által írt) -->
                         <div class="text" style="margin-top: 15px; text-align: justify;">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nam illo minima, ut aut molestias quidem illum itaque? Aliquam repellendus inventore obcaecati nobis, odio deleniti itaque soluta distinctio dolores laboriosam?
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit voluptas modi commodi architecto ducimus cum quo accusamus autem temporibus dignissimos, est consequuntur asperiores necessitatibus libero quasi, laborum amet at dolorem.
+                            Laboriosam alias dolorem aspernatur repellendus expedita aperiam, quos amet doloribus beatae fugit cupiditate? Quidem quaerat qui illo aliquam deleniti autem explicabo consequatur, consectetur soluta aperiam. Cupiditate cumque earum odio hic.
                         </div>
 
                         <!-- Megemlített emberek (user által) -->
@@ -165,7 +172,10 @@
                             <!-- Felhasználói profilkép -->
                             <div class="postPfp" style="width: 65px; height: 65px; background-size: cover; background-position: center; background-repeat: no-repeat; background-image: url('jonkler.webp');"></div>
                             <!-- Felhasználónév -->
-                            <span>@WhySoSerious</span>
+                            <div style="display: flex; flex-wrap: wrap; flex-direction: column; gap: 5px">
+                                <span>@WhySoSerious</span>
+                                <span style="font-size: 15px;">oogabooga</span>
+                            </div>
                             <!-- More button ami "report"/"save" buttonokat tartalmazza -->
                             <span class="material-symbols-outlined more-icon">
                                 <img src="blackSVG/morehorizSVG.svg" alt="More icon" srcset="">
@@ -174,7 +184,7 @@
 
                         <!-- Poszt szövege (user által írt) -->
                         <div class="text" style="margin-top: 15px; text-align: justify;">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nam illo minima, ut aut molestias quidem illum itaque? Aliquam repellendus inventore obcaecati nobis, odio deleniti itaque soluta distinctio dolores laboriosam?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, molestias enim? Animi, pariatur nam incidunt soluta amet repellendus sunt enim ut quod asperiores quidem nihil molestiae atque eos alias perferendis.
                         </div>
 
                         <!-- Megemlített emberek (user által) -->
@@ -201,7 +211,10 @@
                             <!-- Felhasználói profilkép -->
                             <div class="postPfp" style="width: 65px; height: 65px; background-size: cover; background-position: center; background-repeat: no-repeat; background-image: url('jonkler.webp');"></div>
                             <!-- Felhasználónév -->
-                            <span>@WhySoSerious</span>
+                            <div style="display: flex; flex-wrap: wrap; flex-direction: column; gap: 5px">
+                                <span>@WhySoSerious</span>
+                                <span style="font-size: 15px;">oogabooga</span>
+                            </div>
                             <!-- More button ami "report"/"save" buttonokat tartalmazza -->
                             <span class="material-symbols-outlined more-icon">
                                 <img src="blackSVG/morehorizSVG.svg" alt="More icon" srcset="">
@@ -210,7 +223,11 @@
 
                         <!-- Poszt szövege (user által írt) -->
                         <div class="text" style="margin-top: 15px; text-align: justify;">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nam illo minima, ut aut molestias quidem illum itaque? Aliquam repellendus inventore obcaecati nobis, odio deleniti itaque soluta distinctio dolores laboriosam?
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum voluptates, aperiam, neque nisi dolores aut deleniti esse iure illo temporibus accusantium ex hic quidem inventore perferendis quaerat optio corrupti ab!
+                            Soluta tempore necessitatibus eligendi voluptate, praesentium ratione adipisci quod sit quam ab repellendus nulla quas at neque beatae. Quae quis provident aliquam, beatae qui voluptatem repellat corporis maiores commodi nulla.
+                            Ad eos rerum debitis aliquid quidem nisi repudiandae architecto mollitia soluta, numquam cumque deserunt eius repellat voluptates illum porro pariatur corrupti modi recusandae sint eum ex aperiam ipsum! Dolorum, ut.
+                            Eius nostrum enim impedit, quos soluta quasi eveniet, possimus nihil officiis, quisquam quia assumenda molestias saepe totam explicabo deleniti dolorum consequuntur quaerat adipisci delectus! Cumque voluptas quis tempora aperiam vero?
+                            Assumenda neque consectetur suscipit dolorem eaque ducimus tempora delectus voluptas, ipsam sunt deleniti expedita a officiis cum consequuntur! Laboriosam voluptate velit est rerum dicta, maiores nesciunt mollitia! Officia, facere ipsam.
                         </div>
 
                         <!-- Megemlített emberek (user által) -->
