"recentPosts" div elkészítése

--- a/teszt.html
+++ b/teszt.html
@@ -83,6 +83,20 @@
                             <button style="all: unset; padding: 6px 12px; border-radius: 6px; cursor: pointer; background-color: rgb(226, 226, 226); box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); display: flex; justify-content: center; align-items: center;">Follow</button>
                         </div>
                     </div>
+
+                    <span style="margin-left: auto; margin-right: auto; font-size: 20px; margin-bottom: 20px; text-align: center; margin-top: 20px;">Recent posts by followed users</span>
+
+                    <div class="recentPosts" style="display: flex; align-items: center; background-color: rgb(211, 211, 211); padding: 10px; border-radius: 5px; box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); display: flex; flex-wrap: wrap; flex-direction: column;">
+                        <div class="user" style="display: flex; gap: 5px; align-items: center; width: 100%;">
+                            <div class="postPfp" style="background-image: url('jonkler.webp'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 40px; height: 40px; border-radius: 50%;"></div>
+                            <div class="usernames" style="display: flex; flex-direction: column; flex-wrap: wrap; justify-content: center; gap: 2px; flex-grow: 1;">
+                                <p>@Username</p>
+                                <span style="font-size: 15px;">Username</span>
+                            </div>
+                            <button style="all: unset; padding: 6px 12px; border-radius: 6px; cursor: pointer; background-color: rgb(226, 226, 226); box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); display: flex; justify-content: center; align-items: center;">View</button>
+                        </div>
+                    </div>
+
                 </div>
 
                 <!-- Main diven belüli középső div (posztok) -->
