--- a/teszt.html
+++ b/teszt.html
@@ -15,7 +15,7 @@
         .comments-toggle {
             all: unset;
             margin-top: 10px;
-            padding: 5px 10px;
+            padding-top: 5px;
             cursor: pointer;
             font-size: 14px;
             color: #666;
