Profile html módosítása

--- a/profile.html
+++ b/profile.html
@@ -29,11 +29,14 @@
             z-index: 2;
             grid-row: 2/4;
             grid-column: 4/6;
-            background-color: red;
-            width: 160px;
-            height: 160px;
+            background-image: url('jonkler.webp');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            border: 5px solid #f0f0f0;;
+            width: 200px;
+            height: 200px;
             border-radius: 50%;
-            transform: translate(10%, 10%)
         }
 
         .leftInformation {
@@ -73,9 +76,9 @@
         <div class="segitseg">
             <div class="backgroundImage"></div>
             <div class="profilePicture"></div>
-            <div class="leftInformation">
-                <img src="blackSVG/lightBulbSVG.svg" alt="" srcset="">
-                <img src="blackSVG/personSVG.svg" alt="" srcset="">
+            <div class="leftInformation" style="display: flex; justify-content: center; margin-top: 10px;">
+                <img src="blackSVG/lightBulbSVG.svg" alt="" srcset="" style="width: 45px; height: 45px;">
+                <img src="blackSVG/personSVG.svg" alt="" srcset="" style="width: 45px; height: 45px;">
             </div>
             <div class="rightInformation"></div>
         </div>
