--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/teszt.css">
     <script src="js/responsive.js"></script>
     <script src="js/toggleComments.js"></script>
+    <script src="js/progressBar.js"></script>
     <style>
 
         .main {
@@ -228,6 +229,24 @@
                 </div>
 
                 <hr style="all: unset; background-color: rgba(0, 0, 0, 0.05); width: calc(100% + 40px); height: 1px; margin: 20px -20px;">
+
+                <span style="margin-left: auto; margin-right: auto; font-size: 20px; margin-bottom: 20px;">Your progress</span>
+
+                <div class="progressBar" style="width: 100%; height: 27px; background-color: rgb(65, 65, 65); border-radius: 50px; margin-bottom: 20px; padding: 4px;">
+                    <div class="userProgress" style="width: 30%; height: 100%; background-color: rgb(145, 145, 145); border-radius: 50px; display: flex; justify-content: center; align-items: center; color: white;"><span>30%</span></div>
+                </div>
+
+                <div class="toDoList" style="display: flex; justify-content: center;">
+                    <ul">
+                        <li>Follow someone</li>
+                        <li>Post your first idea</li>
+                        <li>Like an idea</li>
+                        <li>Comment on an idea</li>
+                    </ul>
+                </div>
+
+                <hr style="all: unset; background-color: rgba(0, 0, 0, 0.05); width: calc(100% + 40px); height: 1px; margin: 20px -20px;">
+
                 <span style="margin-left: auto; margin-right: auto; font-size: 20px; margin-bottom: 20px;">Who to follow</span>
 
                 <div class="Recommended" style="display: flex; align-items: center; background-color: rgb(211, 211, 211); padding: 10px; border-radius: 5px; box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); display: flex; flex-wrap: wrap; flex-direction: column;">
