Div (.main) megjavítása

--- a/teszt.html
+++ b/teszt.html
@@ -19,12 +19,12 @@
             <a href="teszt.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="Home"><img src="blackSVG/homeSVG.svg" alt="Home icon" srcset=""></span></a>
             <a href="profile.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="blackSVG/personSVG.svg" alt="Person icon" srcset=""></span></a>
             <hr>
-            <a href="news.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="blackSVG/newsSVG.svg" alt="Person icon" srcset=""></span></a>
-            <a href="chat.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="blackSVG/chatSVG.svg" alt="Person icon" srcset=""></span></a>
+            <a href="news.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="News"><img src="blackSVG/newsSVG.svg" alt="Person icon" srcset=""></span></a>
+            <a href="chat.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="Chat"><img src="blackSVG/chatSVG.svg" alt="Person icon" srcset=""></span></a>
             <hr>
             <span class="material-symbols-outlined" data-tooltip="Dark Mode" onclick="myFunction()"><img src="blackSVG/darkmodeSVG.svg" alt="Dark mode icon" srcset=""></span></a>
             <hr>
-            <a href="profile.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="blackSVG/tuneSVG.svg" alt="Person icon" srcset=""></span></a>
+            <a href="profile.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="Settings"><img src="blackSVG/tuneSVG.svg" alt="Person icon" srcset=""></span></a>
             <span class="material-symbols-outlined" data-tooltip="Logout"><img src="blackSVG/logoutSVG.svg" alt="Logout icon" srcset=""></span>
         </div>
     </div>
