--- a/profile.html
+++ b/profile.html
@@ -105,18 +105,18 @@
         <div class="left-icons">
             <!-- Baloldali navigációs menü buttonok/ikonok -->
             <!-- <a href="teszt.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="Home"><img src="blackSVG/homeSVG.svg" alt="Home icon" srcset=""></span></a>-->
-            <a href="teszt.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="Home"><img src="whiteNavSVG/home_40dp_C0C0C0_FILL1_wght400_GRAD0_opsz40.svg" alt="Home icon" srcset=""></span></a>
+            <a href="teszt.html" target="_blank" class="link-size"><span class="material-symbols-outlined" data-tooltip="Home"><img src="whiteNavSVG/home_40dp_C0C0C0_FILL1_wght400_GRAD0_opsz40.svg" alt="Home icon" srcset=""></span></a>
             <!--<a href="profile.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="blackSVG/personSVG.svg" alt="Person icon" srcset=""></span></a>-->
-            <a href="profile.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="whiteNavSVG/person_40dp_C0C0C0_FILL1_wght400_GRAD0_opsz40.svg" alt="Person icon" srcset=""></span></a>
+            <a href="profile.html" target=" _blank" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="whiteNavSVG/person_40dp_C0C0C0_FILL1_wght400_GRAD0_opsz40.svg" alt="Person icon" srcset=""></span></a>
             <hr>
             <!--<a href="news.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="News"><img src="blackSVG/newsSVG.svg" alt="Person icon" srcset=""></span></a>-->
-            <a href="news.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="News"><img src="whiteNavSVG/newsmode_40dp_C0C0C0_FILL1_wght400_GRAD0_opsz40.svg" alt="Person icon" srcset=""></span></a>
+            <a href="news.html" target="_blank" class="link-size"><span class="material-symbols-outlined" data-tooltip="News"><img src="whiteNavSVG/newsmode_40dp_C0C0C0_FILL1_wght400_GRAD0_opsz40.svg" alt="Person icon" srcset=""></span></a>
             <!--<a href="chat.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="Chat"><img src="blackSVG/chatSVG.svg" alt="Person icon" srcset=""></span></a>-->
-            <a href="chat.html" target="_blank"><span class="material-symbols-outlined" data-tooltip="Chat"><img src="whiteNavSVG/forum_40dp_C0C0C0_FILL1_wght400_GRAD0_opsz40.svg" alt="Person icon" srcset=""></span></a>
+            <a href="chat.html" target="_blank" class="link-size"><span class="material-symbols-outlined" data-tooltip="Chat"><img src="whiteNavSVG/forum_40dp_C0C0C0_FILL1_wght400_GRAD0_opsz40.svg" alt="Person icon" srcset=""></span></a>
             <hr>
-            <span class="material-symbols-outlined" data-tooltip="Dark Mode" id="theme-toggle"><img src="whiteNavSVG/light_mode_40dp_C0C0C0_FILL1_wght400_GRAD0_opsz40.svg" alt="Dark mode icon" srcset=""></span></a>
+            <span class="material-symbols-outlined" data-tooltip="Dark Mode" id="theme-toggle" class="link-size"><img src="whiteNavSVG/light_mode_40dp_C0C0C0_FILL1_wght400_GRAD0_opsz40.svg" alt="Dark mode icon" srcset=""></span></a>
             <hr>
-            <span class="material-symbols-outlined" data-tooltip="Logout"><img src="whiteNavSVG/logout_40dp_C0C0C0_FILL1_wght400_GRAD0_opsz40.svg" alt="Logout icon" srcset=""></span>
+            <span class="material-symbols-outlined" data-tooltip="Logout" class="link-size"><img src="whiteNavSVG/logout_40dp_C0C0C0_FILL1_wght400_GRAD0_opsz40.svg" alt="Logout icon" srcset=""></span>
         </div>
     </div>
     <div class="main">
@@ -216,7 +216,7 @@
                                 <textarea class="comment-area" placeholder="Write a comment..."></textarea>
                                 <div class="comment-controls">
                                     <button class="send-button">
-                                        <img src="blackSVG/sendSVG.svg" alt="" srcset="">
+                                        <img src="whiteSVG/send_40dp_C0C0C0_FILL0_wght400_GRAD0_opsz40.svg" alt="" srcset="">
                                     </button>
                                 </div>
                             </div>
@@ -268,7 +268,7 @@
 
                 <span style="margin-left: auto; margin-right: auto; font-size: 20px; margin-bottom: 20px;">Who to follow</span>
 
-                <div class="Recommended" style="display: flex; align-items: center; background-color: rgb(24, 24, 24); padding: 10px; border-radius: 5px; box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); display: flex; flex-wrap: wrap; flex-direction: column;">
+                <div class="Recommended" style="display: flex; align-items: center; background-color: #191919; padding: 10px; border-radius: 5px; box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); display: flex; flex-wrap: wrap; flex-direction: column;">
                     <div class="user" style="display: flex; gap: 5px; align-items: center; width: 100%;">
                         <div class="postPfp" style="background-image: url('jonkler.webp'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 40px; height: 40px; border-radius: 50%;"></div>
                         <div class="usernames" style="display: flex; flex-direction: column; flex-wrap: wrap; justify-content: center; gap: 2px; flex-grow: 1;">
@@ -290,7 +290,7 @@
 
                 <span style="margin-left: auto; margin-right: auto; font-size: 20px; margin-bottom: 20px; text-align: center; margin-top: 20px;">Recent posts by followed users</span>
 
-                <div class="recentPosts" style="display: flex; align-items: center; background-color: rgb(24, 24, 24); padding: 10px; border-radius: 5px; box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); display: flex; flex-wrap: wrap; flex-direction: column;">
+                <div class="recentPosts" style="display: flex; align-items: center; background-color: #191919; padding: 10px; border-radius: 5px; box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); display: flex; flex-wrap: wrap; flex-direction: column;">
                     <div class="user" style="display: flex; gap: 5px; align-items: center; width: 100%;">
                         <div class="postPfp" style="background-image: url('jonkler.webp'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 40px; height: 40px; border-radius: 50%;"></div>
                         <div class="usernames" style="display: flex; flex-direction: column; flex-wrap: wrap; justify-content: center; gap: 2px; flex-grow: 1;">
