--- a/teszt.html
+++ b/teszt.html
@@ -54,16 +54,16 @@
                     <div class="recommendedUser">
                         <div class="userProfilePicture"></div>
                         <div class="usernames">
-                            <p>@Username</p>
-                            <span>Username</span>
+                            <p>Cservenák Dániel</p>
+                            <span>@WhySoSerious</span>
                         </div>
                         <button>Follow</button>
                     </div>
                     <div class="recommendedUser">
                         <div class="userProfilePicture"></div>
                         <div class="usernames">
-                            <p>@Username</p>
-                            <span>Username</span>
+                            <p>Refka Bence</p>
+                            <span>@WhySoSerious</span>
                         </div>
                         <button>Follow</button>
                     </div>
